--- a/_posts/2023-04-03-resiliencia-2023.md
+++ b/_posts/2023-04-03-resiliencia-2023.md
@@ -1,13 +1,13 @@
 ---
 published: true
 layout: post
-title: 'Resiliência: Residência Artística – Residentes 2023'
+title: 'Resiliência: Residência Artística – Arte e Agricultura 2023'
 cover: media/images/cover3.jpg
 category:
   - silo
   - residence
 lang: pt
-ref: residentes2023
+ref: chamada2023
 ---
 
 
@@ -98,7 +98,10 @@ O Planalto do Itatiaia está localizado dentro do território do Parque Nacional
 
 Os Assentamentos da reforma agrária e demais unidades produtivas coletivas ou comunitárias que serão visitadas durante a residência fazem parte do mapeamento realizado pelo programa CaipiraTechLab e estão localizadas dentro de nossa área de atuação: Vale do Rio Paraíba, Serra da Mantiqueira, Serra do Mar, Serra da Bocaina e Vale do Café.
 
-## Código de ética
+## Política de Salvagurada e Código de ética
+
+Os participantes selecionados concordam, no ato da inscrição, com a leitura e adesão à [Política de Salvaguarda] (https://drive.google.com/file/d/1yPMuSurovOo8bFGXrIR_yITI-mZkRhVv/view?usp=share_link){:target="_blank"} \ e ao [Código de Ética e Conduta] (https://drive.google.com/file/d/1HM6B3fzk0RYo5UV6XIwxllvPX8GsZL6z/view?usp=share_link){:target="_blank"} \ da Silo - Arte e Latitude Rural, comprometendo-se a adotar durante todo o processo formativo os compromissos estabelecidos nos referidos documentos.
+
 
 ## Perguntas frequentes
 
