Move Silo escola para pasta linhas de ação

--- a/_posts/2023-04-03-silo-escola-2023-es.md
+++ b/_posts/2023-04-03-silo-escola-2023-es.md
@@ -4,6 +4,7 @@ layout: post
 title: 'Curso: Cómo hacer laboratorios?'
 cover: media/images/cover24.jpg
 category:
+  - silo
   - siloescola
   - laboratorios
   - opencall
@@ -34,7 +35,7 @@ A través de esta convocatoria, invitamos a registrarse a organizaciones de la s
 
 La capacitación incluye talleres y sesiones de tutoría en línea, seguidas de una **inmersión presencial con estancia de 07 días en la sede de Silo - Arte e Latitude Rural, ubicada en el área de protección ambiental de la Serrinha do Alambari, estado de Río de Janeiro, Brasil. El proceso estará liderado por Cinthia Mendonça y Marcos García** (gestores, especialistas en la creación e implementación de laboratorios en organizaciones culturales) y contará con la presencia de invitados de Laboratorios Ciudadanos de Experimentación e Innovación en el contexto iberoamericano.
 
-Accede a la página con respuestas a **las preguntas más frecuentes** [aquí](/perguntas-frequentes-curso-silo-escola-es){:target="_blank"}.
+Accede a la página con respuestas a **las preguntas más frecuentes** [aquí](/perguntas-frequentes-silo-escola-2023-es){:target="_blank"}.
 
 <br>
 
