--- a/_posts/2023-04-03-silo-escola-2023.md
+++ b/_posts/2023-04-03-silo-escola-2023.md
@@ -3,8 +3,8 @@ published: true
 layout: post
 title: 'Curso: Como fazer laboratórios?'
 cover: media/images/cover24.jpg
-# permalink: /siloescola/convocatoria
 category:
+  - silo
   - siloescola
   - laboratorios
   - opencall
@@ -35,7 +35,7 @@ Por meio desta chamada convidamos a se inscreverem, organizações da sociedade 
 
 A formação conta com workshops e sessões de mentoria online, seguida de uma imersão presencial na sede da Silo - Arte e Latitude Rural, localizada na área de proteção ambiental, Serrinha do Alambari, estado do Rio de Janeiro, Brasil. **O processo será conduzido por Cinthia Mendonça e Marcos Garcia** (gestores, especialistas na criação e implementação de laboratórios em instituições culturais) e contará com a presença de convidadas/os de Laboratórios Cidadãos de Experimentação e Inovação do contexto Ibero-Americano.
 
-[Acesse aqui](/perguntas-frequentes-curso-silo-escola){:target="_blank"} a página com respostas às **perguntas mais frequentes.**
+[Acesse aqui](/perguntas-frequentes-silo-escola-2023){:target="_blank"} a página com respostas às **perguntas mais frequentes.**
 
 <br>
 
