--- a/_posts/2023-04-03-silo-escola-2023-es.md
+++ b/_posts/2023-04-03-silo-escola-2023-es.md
@@ -35,9 +35,8 @@ La capacitación incluye talleres y sesiones de tutoría en línea, seguidas de 
 
 Accede a la página con respuestas a **las preguntas más frecuentes** [aquí](/perguntas-frequentes-silo-escola-2023-es){:target="_blank"}.
 
-<br>
 
-**Calendario**
+## Calendario
 
 Apertura de convocatoria: 03 de abril de 2023 <br>
 Cierre de convocatoria: 15 de mayo de 2023 <br>
@@ -46,9 +45,8 @@ Talleres online: Del 21 de junio al 6 de julio de 2023 (miércoles y jueves de 1
 Mentoría online: del 12 al 30 de julio de 2023 (por definir) <br>
 Inmersión en Silo: del 10 al 17 de septiembre de 2023
 
-<br>
 
-**Objetos de la convocatoria**
+## Objetos de la convocatoria
 
 El objeto de esta convocatoria es la selección de un máximo de 8 organizaciones que deseen crear sus laboratorios de forma colaborativa. Las organizaciones seleccionadas deberán designar 02 personas para participar en el proceso. De esta manera, hay más posibilidades de que el trabajo realizado durante el curso pueda implementarse en las organizaciones.
 
@@ -62,9 +60,8 @@ Las solicitudes deben ser realizadas por las organizaciones.
 
 Esta metodología, así como los productos generados por ella, están orientados a beneficiar a las comunidades y garantizar la gestión comunitaria de los bienes comunes de la sociedad donde se insertan.
 
-<br>
 
-**Metodología:**
+## Metodología:
 
 Esta formación pretende ser una comunidad de aprendizaje y práctica que apoye el desarrollo de las propuestas seleccionadas. El proceso de prototipado colaborativo será realizado por el dúo de participantes nominados por sus organizaciones. Estos contarán con el apoyo de los gerentes Marcos García y Cinthia Mendonça, así como del equipo de Silo - Arte e Latitude Rural y otros 13 gerentes invitados de laboratorios ciudadanos nacionales e internacionales.
 
@@ -80,9 +77,8 @@ Las sesiones en línea y presenciales se realizarán en portugués y español.
 
 El proceso de creación de prototipos debe ser sistematizado y documentado por el dúo. La documentación del proceso será compartida en nuestra plataforma web. Al finalizar la capacitación, la versión prototipo de la propuesta de laboratorio será presentada públicamente por los participantes en un evento presencial transmitido en vivo.
 
-<br>
 
-**Aplicaciones**
+## Aplicaciones
 
 Cada organización deberá completar el formulario de inscripción en el cual deberá adjuntar los siguientes documentos:
 
@@ -93,9 +89,8 @@ Cada organización deberá completar el formulario de inscripción en el cual de
 
 Enlace para el [FORMULARIO](https://forms.gle/zaPGbcoa2CbXVgCs5){:target="_blank"}.
 
-<br>
 
-**Proceso de Evaluación**
+## Proceso de Evaluación
 
 El comité de selección está compuesto por Marcos García, Cinthia Mendonça y gerentes invitados.
 
@@ -107,15 +102,13 @@ El proceso de selección evaluará:
 * Beneficios potenciales para la comunidad.
 * Sostenibilidad potencial de la propuesta.
 
-<br>
 
-**Compromiso de los seleccionados**
+## Compromiso de los seleccionados
 
 Los dúos participantes se comprometen a: asistir a todas las actividades de formación a distancia; estar presente en la inmersión presencial en Silo; sistematizar y documentar las propuestas desarrolladas en nuestra plataforma; y presentar el resultado del prototipo desarrollado al final de la capacitación.
 
-<br>
 
-**Inversión**
+## Inversión
 
 La organización seleccionada para realizar la capacitación deberá invertir el monto de **€ 3.071,28** por dúo (€ 1.535,64 por persona).
 
@@ -125,45 +118,39 @@ Ofrecemos la opción de pago:
 
 * vía SWIFT hasta el 16/06/2023 a las 23:59 hora de Brasilia, Brasil.
 
-<br>
 
-**Becas**
+## Becas
 
 Si la organización desea postularse para una beca, debe postularse a través del formulario y hacer el upload de una carta de solicitud que explique los motivos de la solicitud.
 
 Silo puede otorgar hasta dos becas a 1 organización. Se considerarán los siguientes criterios para el acceso a las becas: presentación de la carta de solicitud; ubicación geográfica, equidad racial y de género, contexto socioeconómico de la organización.
 
-<br>
 
-**Quórum**
+## Quórum
 
 Para que el curso sea posible, tendremos que recibir, al menos, la inscripción de 5 organizaciones (10 personas).
 
-<br>
 
-**Histórico**
+## Histórico
 
 El modelo de Laboratorio Ciudadano que proponemos en esta formación fue desarrollado por Medialab Prado (España) y otras organizaciones de diferentes partes del mundo, como Silo - Arte e Latitude Rural (Brasil), la Agencia de Cooperación Española y la Sociedad Iberoamericana. Secretaría General (España). Este modelo de organización tiene su origen en un formato de actividad denominado taller de prototipado colaborativo.
 
 Para conocer más sobre la historia de los laboratorios, haga clic [aquí](https://docs.google.com/document/d/10Wx14FZzyI2XBk2-rRA97qLBJCePVNaWXhOAiaCdnCs/edit){:target="_blank"}
 
-<br>
 
-**Silo Escuela**
+## Silo Escuela
 
 Silo Escola es una línea de acción de Silo - Arte e Latitude Rural. Ofrece procesos de formación en diferentes formatos, alineados con los programas de la organización y las temáticas y áreas de conocimiento con las que trabajamos. Muchos de estos cursos son multi, inter o transdisciplinarios y atienden a diferentes epistemologías.
 
 A través de diferentes formatos, uniendo pensamiento y práctica, Silo Escola crea comunidades de aprendizaje y ofrece oportunidades para aprender a través del intercambio de conocimientos. Nuestros cursos pueden ser online, presenciales e inmersivos.
 
-<br>
 
-**Política de Salvaguarda y Código Ético**
+## Política de Salvaguarda y Código Ético
 
 Los participantes seleccionados se comprometen, al registrarse, a leer y adherirse a la [Política de Salvaguarda](https://drive.google.com/file/d/1yPMuSurovOo8bFGXrIR_yITI-mZkRhVv/view?usp=share_link){:target="_blank"} y al [Código de Ética y Conducta](https://drive.google.com/file/d/1HM6B3fzk0RYo5UV6XIwxllvPX8GsZL6z/view?usp=share_link){:target="_blank"} de Silo - Arte e Latitude Rural, comprometiéndose a adoptar los compromisos establecidos en dichos documentos a lo largo del proceso de formación.
 
-<br>
 
-**PROGRAMACIÓN EN LÍNEA**
+## PROGRAMACIÓN EN LÍNEA
 
 **TALLERES**
 
