--- a/_posts/2023-04-03-silo-escola-2023.md
+++ b/_posts/2023-04-03-silo-escola-2023.md
@@ -33,7 +33,6 @@ Por meio desta chamada convidamos a se inscreverem, organizações da sociedade 
 
 A formação conta com workshops e sessões de mentoria online, seguida de uma imersão presencial na sede da Silo - Arte e Latitude Rural, localizada na área de proteção ambiental, Serrinha do Alambari, estado do Rio de Janeiro, Brasil. O processo será conduzido por **Cinthia Mendonça e Marcos Garcia** (gestores, especialistas na criação e implementação de laboratórios em instituições culturais) e contará com a presença de convidadas/os de Laboratórios Cidadãos de Experimentação e Inovação do contexto Ibero-Americano.
 
-<br>
 
 ## Calendário
 
@@ -44,7 +43,6 @@ Workshops remotos: de 21 de junho a 06 de julho de 2023 (quartas e quintas de 10
 Mentorias remotas: de 12 a 30 de julho 2023 (a definir) <br>
 Imersão na Silo: 10 a 17 de setembro de 2023 <br>
 
-<br>
 
 ## Objetos da convocatória
 
@@ -60,7 +58,6 @@ As inscrições deverão ser realizadas pelas instituições.
 
 Essa metodologia, assim como os seus produtos gerados por ela, são orientadas a beneficiar as comunidades e garantir a gestão comunitária dos bens comuns da sociedade onde estão inseridas.
 
-<br>
 
 ## Metodologia:
 
@@ -78,9 +75,8 @@ As sessões online e presenciais serão realizadas em Português e Espanhol.
 
 O processo de prototipagem deverá ser sistematizado e documentado pelas duplas. A documentação dos processos será compartilhada em nossa plataforma web. No final da formação, a versão prototipada da proposta de laboratório será apresentada publicamente pelos participantes em um evento presencial transmitido ao vivo.
 
-<br>
 
-**Das inscrições**
+## Das inscrições
 
 Cada instituição deve preencher o [formulário](https://forms.gle/zaPGbcoa2CbXVgCs5){:target="_blank"}, no qual deverá ser anexado os seguintes documentos:
 * definição da proposta de laboratório que gostaria de prototipar (definição, objetivos, necessidades às quais responde, comunidades com as quais trabalha ou gostaria de trabalhar e recursos com os quais pode contar - materiais, humanos, institucionais);
@@ -88,9 +84,8 @@ Cada instituição deve preencher o [formulário](https://forms.gle/zaPGbcoa2CbX
 * carta de intenção (qual o interesse da instituição em fazer esse curso, indicando se já conhece a metodologia dos laboratórios cidadãos ou laboratórios de experimentação e inovação);
 * currículo da dupla que representará a instituição (não deixe de colocar no currículo: nome e sobrenome, data de nascimento, função na organização, gênero e raça).
 
-<br>
 
-**Processo de seleção**
+## Processo de seleção
 
 O comitê de seleção é composto por Marcos Garcia, Cinthia Mendonça e gestores convidados.
 
@@ -101,15 +96,13 @@ No processo seletivo será avaliado:
 * Potencial de benefícios para a comunidade.
 * Potencial de sustentabilidade da proposta.
 
-<br>
 
-**Compromisso das/os selecionadas/os**
+## Compromisso das/os selecionadas/os
 
 As duplas participantes se comprometem a: assistir todas as atividades remotas de formação; de estarem presentes na imersão presencial na Silo; a sistematizar e documentar as propostas desenvolvidas em nossa plataforma; e a apresentar o resultado do protótipo desenvolvido ao final da formação.
 
-<br>
 
-**Investimento**
+## Investimento
 
 A instituição selecionada para realizar a formação deverá investir a quantia de R$ **15.000,00** por dupla (R$ 7.500,00 por pessoa).
 
@@ -121,45 +114,39 @@ Oferecemos duas opções de pagamento:
 * via boleto até o dia 16/06/2023 às 23h59 do horário de Brasília
 * via contrato, de acordo com formato de pagamento de cada instituição, a combinar.
 
-<br>
 
-**Bolsas**
+## Bolsas
 
 Caso a instituição queira pedir uma bolsa para a formação, ela deve fazer a inscrição pelo formulário e fazer o upload de uma carta de solicitação que explique os motivos do pedido.
 
 A Silo poderá disponibilizar até duas bolsas para 1 instituição. Serão considerados os seguintes critérios para acesso às bolsas: envio da carta de solicitação; localização geográfica, equidade racial e de gênero, contexto sócio-econômico da instituição.
 
-<br>
 
-**Quorum**
+## Quorum
 
 Para que seja possível a realização do curso, teremos que receber - no mínimo - a inscrição de 5 instituições (10 pessoas).
 
-<br>
 
-**Histórico**
+## Histórico
 
 O modelo de Laboratório Cidadão que propomos nesta formação foi desenvolvido pelo Medialab Prado (Espanha) e outras organizações de diferentes partes do mundo, como Silo - Arte e Latitude Rural (Brasil), a Agência Espanhola de Cooperação e a Secretaria Geral Ibero-Americana (Espanha). Esse modelo de instituição tem origem em um formato de atividade denominado oficina de prototipagem colaborativa.
 
 Para saber mais sobre a história dos laboratórios acesse [aqui]([https://docs.google.com/document/d/10Wx14FZzyI2XBk2-rRA97qLBJCePVNaWXhOAiaCdnCs/edit](https://drive.google.com/file/d/10owVt8I9WY-2oTJUbyqU0sHYn3UXpfnD/view?usp=sharing){:target="_blank"}
 
-<br>
 
-**Silo Escola**
+## Silo Escola
 
 Silo Escola é uma linha de ação da Silo - Arte e Latitude Rural. Ela oferece processos formativos em diferentes formatos, alinhados aos programas da organização e aos temas e áreas do conhecimento com os quais trabalhamos. Muitos desses cursos são multi, inter ou transdisciplinares e atendem a diferentes epistemologias.
 
 Por meio de diferentes formatos, unindo pensamento e prática, a Silo Escola vai criando comunidades de aprendizagem e oferecendo oportunidade de aprender por meio do intercâmbio de saberes. Nossos cursos podem ser online, presenciais e imersivos.
 
-<br>
 
-**Política de Salvaguarda e Código de Ética**
+## Política de Salvaguarda e Código de Ética
 
 Os participantes selecionados concordam, no ato da inscrição, com a leitura e adesão à [Política de Salvaguarda](https://drive.google.com/file/d/1yPMuSurovOo8bFGXrIR_yITI-mZkRhVv/view?usp=share_link){:target="_blank"} e ao [Código de Ética e Conduta](https://drive.google.com/file/d/1HM6B3fzk0RYo5UV6XIwxllvPX8GsZL6z/view?usp=share_link){:target="_blank"} da Silo - Arte e Latitude Rural, comprometendo-se a adotar durante todo o processo formativo os compromissos estabelecidos nos referidos documentos.
 
-<br>
 
-**PROGRAMAÇÃO ONLINE**
+## PROGRAMAÇÃO ONLINE
 
 **OFICINAS**
 
