Ajustes revisão Cinthia

--- a/_posts/2023-04-03-silo-escola-2023-es.md
+++ b/_posts/2023-04-03-silo-escola-2023-es.md
@@ -25,7 +25,7 @@ ref: lab-siloescola-call
 
 _Una iniciativa para quienes quieren aprender en comunidad a partir de una experiencia teórico-práctica._
 
-<br><br>
+<br>
 
 **Silo - Arte e Latitude Rural**, a través de **Silo Escuela**, va a recibir 8 organizaciones (públicas y privadas), interesadas en poner en marcha un **Laboratorio de Experimentación e Innovación**, donde cada organización debe enviar hasta 02 personas para participar del proceso formativo.
 
@@ -33,22 +33,20 @@ A través de esta convocatoria, invitamos a registrarse a organizaciones de la s
 
 La capacitación incluye talleres y sesiones de tutoría en línea, seguidas de una **inmersión presencial con estancia de 07 días en la sede de Silo - Arte e Latitude Rural, ubicada en el área de protección ambiental de la Serrinha do Alambari, estado de Río de Janeiro, Brasil. El proceso estará liderado por Cinthia Mendonça y Marcos García** (gestores, especialistas en la creación e implementación de laboratorios en organizaciones culturales) y contará con la presencia de invitados de Laboratorios Ciudadanos de Experimentación e Innovación en el contexto iberoamericano.
 
-Accede a la página con respuestas a **las preguntas más frecuentes** [aquí](/perguntas-frequentes-silo-escola-2023-es){:target="_blank"}.
-
 
 ## Calendario
 
 Apertura de convocatoria: 03 de abril de 2023 <br>
 Cierre de convocatoria: 15 de mayo de 2023 <br>
 Publicación de organizaciones seleccionadas: 17 de mayo de 2023 <br>
-Talleres online: Del 21 de junio al 6 de julio de 2023 (miércoles y jueves de 10:00 a 12:00 hrs) <br>
+Talleres online: Del 21 de junio al 6 de julio de 2023 (miércoles y jueves de 10:00 a 12:00 hrs BRT) <br>
 Mentoría online: del 12 al 30 de julio de 2023 (por definir) <br>
 Inmersión en Silo: del 10 al 17 de septiembre de 2023
 
 
 ## Objetos de la convocatoria
 
-El objeto de esta convocatoria es la selección de un máximo de 8 organizaciones que deseen crear sus laboratorios de forma colaborativa. Las organizaciones seleccionadas deberán designar 02 personas para participar en el proceso. De esta manera, hay más posibilidades de que el trabajo realizado durante el curso pueda implementarse en las organizaciones.
+El objeto de esta convocatoria es la selección de un máximo de 8 organizaciones que deseen crear sus laboratorios de forma colaborativa. Las organizaciones seleccionadas deberán designar 02 personas para participar en el proceso.
 
 Esta convocatoria está dirigida a organizaciones cuyo objetivo sea montar un Laboratorio de Experimentación e Innovación o mejorar uno existente:
 * Gobiernos (municipal, estatal o federal)
@@ -73,7 +71,7 @@ Después del final de los módulos, el dúo participa en 8 horas de reuniones co
 
 Una vez finalizadas las sesiones de tutoría, comenzamos la inmersión presencial de 7 días en la sede de Silo (Serra da Mantiqueira): diálogos con invitados online, sesiones de trabajo en dúos y grupos, tutorías presenciales y otras actividades de intercambio entre los participantes.
 
-Las sesiones en línea y presenciales se realizarán en portugués y español.
+Las sesiones en línea y presenciales se realizarán en Portugués y Español.
 
 El proceso de creación de prototipos debe ser sistematizado y documentado por el dúo. La documentación del proceso será compartida en nuestra plataforma web. Al finalizar la capacitación, la versión prototipo de la propuesta de laboratorio será presentada públicamente por los participantes en un evento presencial transmitido en vivo.
 
@@ -85,14 +83,14 @@ Cada organización deberá completar el formulario de inscripción en el cual de
 1. Definición de la propuesta de laboratorio que le gustaría prototipar (definición, objetivos, necesidades a las que responde, comunidades con las que trabaja o le gustaría trabajar y recursos con los que puede contar - materiales, humanos, institucionales);
 2. Portafolio o breve curriculum de la organización;
 3. Carta de intención (cuál es el interés de la organización en tomar este curso? ya conoce la metodología de los laboratorios ciudadanos o laboratorios de experimentación e innovación?);
-4. Currículo del dúo que representará a la organización (por favor, ponga: nombre y apellido, fecha de nacimiento, función en la organización, género y etnia).
+4. Currículo del dúo que representará a la organización (por favor, ponga: nombre y apellido, fecha de nacimiento, función en la organización, género).
 
 Enlace para el [FORMULARIO](https://forms.gle/zaPGbcoa2CbXVgCs5){:target="_blank"}.
 
 
 ## Proceso de Evaluación
 
-El comité de selección está compuesto por Marcos García, Cinthia Mendonça y gerentes invitados.
+El comité de selección está compuesto por Marcos García, Cinthia Mendonça.
 
 El proceso de selección evaluará:
 
@@ -116,7 +114,7 @@ El monto invertido incluye: 12 horas de talleres a distancia; 8 horas de tutorí
 
 Ofrecemos la opción de pago:
 
-* vía SWIFT hasta el 16/06/2023 a las 23:59 hora de Brasilia, Brasil.
+* vía SWIFT hasta el 16/06/2023 a las 23:59 hora de Brasilia, Brasil (BRT).
 
 
 ## Becas
@@ -135,7 +133,7 @@ Para que el curso sea posible, tendremos que recibir, al menos, la inscripción 
 
 El modelo de Laboratorio Ciudadano que proponemos en esta formación fue desarrollado por Medialab Prado (España) y otras organizaciones de diferentes partes del mundo, como Silo - Arte e Latitude Rural (Brasil), la Agencia de Cooperación Española y la Sociedad Iberoamericana. Secretaría General (España). Este modelo de organización tiene su origen en un formato de actividad denominado taller de prototipado colaborativo.
 
-Para conocer más sobre la historia de los laboratorios, haga clic [aquí](https://docs.google.com/document/d/10Wx14FZzyI2XBk2-rRA97qLBJCePVNaWXhOAiaCdnCs/edit){:target="_blank"}
+Para conocer más sobre la historia de los laboratorios, haga clic [aquí](https://drive.google.com/file/d/10owVt8I9WY-2oTJUbyqU0sHYn3UXpfnD/view?usp=sharing){:target="_blank"}
 
 
 ## Silo Escuela
@@ -149,6 +147,7 @@ A través de diferentes formatos, uniendo pensamiento y práctica, Silo Escola c
 
 Los participantes seleccionados se comprometen, al registrarse, a leer y adherirse a la [Política de Salvaguarda](https://drive.google.com/file/d/1yPMuSurovOo8bFGXrIR_yITI-mZkRhVv/view?usp=share_link){:target="_blank"} y al [Código de Ética y Conducta](https://drive.google.com/file/d/1HM6B3fzk0RYo5UV6XIwxllvPX8GsZL6z/view?usp=share_link){:target="_blank"} de Silo - Arte e Latitude Rural, comprometiéndose a adoptar los compromisos establecidos en dichos documentos a lo largo del proceso de formación.
 
+<br>
 
 ## PROGRAMACIÓN EN LÍNEA
 
@@ -157,10 +156,10 @@ Los participantes seleccionados se comprometen, al registrarse, a leer y adherir
 **Módulo 1 - INTRODUCCIÓN**
 
 **21/06 TALLER 1 (2h)** <br>
-Presentación con Cinthia Mendonça y Marcos García.
+Presentación con Cinthia Mendonça (Brasil) y Marcos García (España).
 
 **Invitado:** <br>
-Antonio Lafuente (ES)
+Antonio Lafuente (España)
 
 **Contenido:** <br>
 Introducción sobre el curso <br>
@@ -174,7 +173,7 @@ Introducción conceptual
 Com Cinthia Mendonça y Marcos García
 
 **Invitados:** <br>
-David Gómez y Valentina Sánchez (MX)
+David Gómez y Valentina Sánchez (Mexico)
 
 **Contenido:** <br>
 Metodología. ¿Qué son los Laboratorios de Ciudadanos de Experimentación e Innovación? ¿Cómo trabajan? ¿Dónde se pueden hacer?
@@ -183,7 +182,7 @@ Metodología. ¿Qué son los Laboratorios de Ciudadanos de Experimentación e In
 Com Cinthia Mendonça y Marcos García
 
 **Invitada:** <br>
-Carolina Cardoso (PT)
+Carolina Cardoso (Portugal)
 
 **Contenido:** <br>
 Metodología. Aspectos de los laboratorios.
@@ -195,13 +194,13 @@ Metodología. Aspectos de los laboratorios.
 Con Cinthia Mendonça y Marcos García. Conversación con criadores y administradores de laboratorio.
 
 **Invitados:** <br>
-Rodrigo Savazoni (Instituto Procomun, São Paulo) y Paola Coral (Innovación Pública y Cultural, Colombia).
+Rodrigo Savazoni (Instituto Procomun, Brasil) y Paola Coral (Innovación Pública y Cultural, Colombia).
 
 **05/07 TALLER 5 (2h)** <br>
 Con Cinthia Mendonça y Marcos García. Conversación con criadores y administradores de laboratorio.
 
 **Huéspedes:** <br>
-Pablo Pascal (SEGIB, LABIC, España) y Laryssa Tarachucky (Labic Novale, Santa Catarina)
+Pablo Pascal (SEGIB, LABIC, España) y Laryssa Tarachucky (Labic Novale, Brasil)
 
 
 **Módulo 4 - CÓMO PROTOTIPAR LABORATORIOS**
@@ -227,4 +226,7 @@ Con Cinthia Mendonça y Marcos García.
 Con la presencia de Cinthia Mendonça y Marcos García.
 
 **Invitados online:** <br>
-Raúl Olivan (Espanha), José Maia (Portugal) entre outras e outros.
+Raúl Olivan (España), José Maia (Portugal),  Moises Medrano (Colombia) entre otras y otros.
+
+Accede a la página con respuestas a **las preguntas más frecuentes** [aquí](/perguntas-frequentes-silo-escola-2023-es){:target="_blank"}.
+
