--- a/_posts/2023-04-03-silo-escola-2023.md
+++ b/_posts/2023-04-03-silo-escola-2023.md
@@ -25,13 +25,13 @@ ref: lab-siloescola-call
 
 _Uma iniciativa para quem quer aprender em comunidade a partir de uma experiência teórica/prática._
 
-<br><br>
+<br>
 
 A **Silo - Arte e Latitude Rural** por meio da **Silo Escola** oferece 8 vagas para processo de formação e desenho de **Laboratórios de Experimentação e Inovação** para instituições (públicas e privadas) em âmbito Internacional, onde cada organização deverá enviar até 02 pessoas para participar do processo formativo.
 
-Por meio desta chamada convidamos a se inscreverem, organizações da sociedade civil, empresas, fundações, coletivos, redes, governos e instâncias públicas ou privadas que desejam criar um Laboratório de Experimentação e Inovação. As propostasdas instituições selecionadas serão prototipadas colaborativamente nesse processo formativo entre 21 de junho e 17 de setembro de 2023 com atividades remotas e presenciais.
+Por meio desta chamada convidamos a se inscreverem, organizações da sociedade civil, empresas, fundações, coletivos, redes, governos e instâncias públicas ou privadas que desejam criar um Laboratório de Experimentação e Inovação. As propostas das instituições selecionadas serão prototipadas colaborativamente nesse processo formativo entre 21 de junho e 17 de setembro de 2023 com atividades remotas e presenciais.
 
-A formação conta com workshops e sessões de mentoria online, seguida de uma imersão presencial na sede da Silo - Arte e Latitude Rural, localizada na área de proteção ambiental, Serrinha do Alambari, estado do Rio de Janeiro, Brasil. O processo será conduzido por **Cinthia Mendonça e Marcos Garcia** (gestores, especialistas na criação e implementação de laboratórios em instituições culturais) e contará com a presença de convidadas/os de Laboratórios Cidadãos de Experimentação e Inovação do contexto Ibero-Americano.
+A formação conta com workshops e sessões de mentoria online, seguida de uma imersão presencial na sede da Silo - Arte e Latitude Rural, localizada na área de proteção ambiental, Serrinha do Alambari, estado do Rio de Janeiro, Brasil. **O processo será conduzido por Cinthia Mendonça e Marcos Garcia** (gestores, especialistas na criação e implementação de laboratórios em instituições culturais) e contará com a presença de convidadas/os de Laboratórios Cidadãos de Experimentação e Inovação do contexto Ibero-Americano.
 
 
 ## Calendário
