--- a/_posts/2023-04-03-resiliencia-2023.md
+++ b/_posts/2023-04-03-resiliencia-2023.md
@@ -97,6 +97,7 @@ As pessoas selecionadas se comprometem a participar da residência durante todo 
 
 A residência ocorrerá entre os dias **23 de julho a 20 de agosto de 2023**. Cada pessoa selecionada receberá: passagens - ida e volta - de seu local de origem, alojamento privado ou compartilhado, estúdios compartilhados, alimentação gratuita e a quantia de **R$2.000,00**.
 
+Acesse [aqui](/perguntas-frequentes-resiliencia-2023){:target="_blank"} a página com respostas às perguntas mais frequentes.
 
 ## Locais e contexto
 
