renomeando e juntando categorias interactivos+laboratios -> labs

--- a/_posts/2017-01-01-interactivos-2016.md
+++ b/_posts/2017-01-01-interactivos-2016.md
@@ -4,7 +4,7 @@ title: "Confira a documentação do Interactivos?'16: Água e Autonomia"
 cover: media/images/cover4.jpg
 category:
   - silo
-  - interactivos
+  - labs
 swipebox: i16
 lang: pt
 ref: doc-interactivos16
