fix: banner encontrada confabulacoes

--- a/_posts/2024-06-10-encontrada2024.md
+++ b/_posts/2024-06-10-encontrada2024.md
@@ -12,7 +12,7 @@ lang: pt
 ref: encontrada-24
 ---
 
-![Banner EncontrADA 2024](/media/images/banner_encontrada2024.jpg)
+![Banner EncontrADA 2024](/media/images/programs/banner/encontrada_confabulacoes.png)
 
 ## **EncontrADA: Confabulações**
 
