--- a/_posts/2025-07-23-novo-post.md
+++ b/_posts/2025-07-23-novo-post.md
@@ -11,3 +11,5 @@ ref: ""
 teste novo post
 
 ![alt text](/media/images/uploads/7.jpg "titulo imagem")
+
+![teste alt text](/media/images/uploads/logotipo-plano-de-designer-grafico-de-neon_1421494-568.jpg "logo teste")
