[cms] - Update Posts “2025-07-23-novo-post”

--- a/_posts/2025-07-23-novo-post.md
+++ b/_posts/2025-07-23-novo-post.md
@@ -10,6 +10,4 @@ ref: ""
 ---
 teste novo post
 
-![alt text](/media/images/uploads/7.jpg "titulo imagem")
-
-![teste alt text](/media/images/uploads/logotipo-plano-de-designer-grafico-de-neon_1421494-568.jpg "logo teste")
+![alt text ](/media/images/uploads/logotipo-plano-de-designer-grafico-de-neon_1421494-568.jpg "titulo imagem")
